--- a/index.html
+++ b/index.html
@@ -82,6 +82,33 @@
                         <p class="film__card-body-desc">At first glance, you can decide that Wakanda is an ordinary territory of wild Africa, but this is not so. Here, in the bowels of the desert lands, there are hidden deposits of a unique metal capable of absorbing...</p>
                     </div>
                 </div>
+                <div class="film__card">
+                    <img src="./img/film2.png" class="film__card-img" alt="">
+                    <div class="film__card-body">
+                        <span class="film__card-body-icon"><i class="fad fa-play"></i></span>
+                        <p class="film__card-body-time">2:32:13</p>
+                        <h1 class="film__card-body-title">The Dark Knight</h1>
+                        <p class="film__card-body-desc">Batman raises stakes in the war on crime. With the help of Lieutenant Jim Gordon and Attorney Harvey Dent, he intends to clear the streets of crime that is poisoning the city. The cooperation is effective, but soon they...</p>
+                    </div>
+                </div>
+                <div class="film__card">
+                    <img src="./img/film3.png" class="film__card-img" alt="">
+                    <div class="film__card-body">
+                        <span class="film__card-body-icon"><i class="fad fa-play"></i></span>
+                        <p class="film__card-body-time">1:53:45</p>
+                        <h1 class="film__card-body-title">The Gentlemen</h1>
+                        <p class="film__card-body-desc">One cunning American, from his student years, had been selling drugs, and now he came up with a scheme of illegal enrichment using the estates of an impoverished English aristocracy and made a very good fortune on ...</p>
+                    </div>
+                </div>
+                <div class="film__card">
+                    <img src="./img/film4.png" class="film__card-img" alt="">
+                    <div class="film__card-body">
+                        <span class="film__card-body-icon"><i class="fad fa-play"></i></span>
+                        <p class="film__card-body-time">2:58:20</p>
+                        <h1 class="film__card-body-title">The Lord of the...</h1>
+                        <p class="film__card-body-desc">Tales of Middle-earth is a chronicle of the Great War for the Ring, a war that lasted more than one thousand years. The one who owned the Ring received power over all living creatures, but was obliged to serve evil...</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
