--- a/index.html
+++ b/index.html
@@ -136,6 +136,38 @@
             </div>
         </div>
     </div>
+    <div class="collections">
+        <div class="container">
+            <h2 class="title">Collections</h2>
+            <div class="collections__wrap">
+                <div class="collections__card">
+                    <img src="./img/colekt1.png" class="collections__card-bg" alt="">
+                    <img src="./img/gg.png" class="lines" alt="">
+                    <div class="collections__card-body">
+                        <span class="collections__card-body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="collections__card-body-title">All Marvel Films</h3>
+                    </div>
+                </div>
+                <div class="collections__card">
+                    <img src="./img/colekt2.png" class="collections__card-bg" alt="">
+                    <img src="./img/gg.png" class="lines" alt="">
+                    <div class="collections__card-body">
+                        <span class="collections__card-body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="collections__card-body-title">Fast and the Furious</h3>
+                    </div>
+                </div>
+                <div class="collections__card">
+                    <img src="./img/colekt3.png" class="collections__card-bg" alt="">
+                    <img src="./img/gg.png" class="lines" alt="">
+                    <div class="collections__card-body">
+                        <span class="collections__card-body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="collections__card-body-title">Star Wars</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <h2 class="title"></h2>
 </body>
 
 </html>
